fix: :bug: Zoom on iphone bug

--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -18,6 +18,13 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  /* iphone zoom fix */
+  font-size: 16px;
+}
+/* iphone zoom fix */
+input,
+select {
+  font-size: 100%;
 }
 article,
 aside,
